--- a/index.html
+++ b/index.html
@@ -53,6 +53,49 @@
             </div>
           </nav>
      </header>
+<!-- carousal-section  -->
+<!-- <section class="caro">
+  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img src="img/Shirish-104.jpg" class=" img-fluid d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Destination Wedding Shoot</h5>
+          <p>We create a personal atmosphere for the couple to bring out the attachment in the wedding photographs.</p>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="img/pre-wedding-1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/candid.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section> -->
+
+
       <!-- Carousel section -->
       <section class="carousel">
        <div class="container-fluid">
@@ -66,7 +109,7 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/Shirish-20.jpg" class="d-block w-100 img-fluid" alt="...">
+                  <img src="img/Shirish-104.jpg" class="d-block w-100 img-fluid" alt="...">
                   <div class="carousel-caption d-md-block">
                     <h5>Destination Wedding Shoot</h5>
                     <p>We create a personal atmosphere for the couple to bring out the attachment in the wedding photographs.</p>
@@ -80,7 +123,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img/pre-weddings.jpg" class="d-block w-100" alt="...">
+                  <img src="img/pre-wedding-1.jpg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-md-block">
                     <h5>Pre-Wedding Shoot</h5>
                     <p>Pre wedding photography is intent of capturing natural expressions and natural moments and real time emotions shared by the couples.</p>
