--- a/index.html
+++ b/index.html
@@ -101,29 +101,28 @@
        <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-sm-12 col-lg-12">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div id="carouselExampleCaptions" class="carousel slide carousel-fade " data-bs-ride="false">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
               <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="img/Shirish-104.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-item carousel-image bg-img-1 active">
                   <div class="carousel-caption d-md-block">
                     <h5>Destination Wedding Shoot</h5>
                     <p>We create a personal atmosphere for the couple to bring out the attachment in the wedding photographs.</p>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="img/candid.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-item carousel-image bg-img-2">
+              
                   <div class="carousel-caption d-md-block">
                     <h5>Candid Shoot</h5>
                     <p>The most beautiful moments happen in a flickering second, and it is our job to freeze that moment in time.</p>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="img/pre-wedding-1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-item carousel-image bg-img-3">
+                
                   <div class="carousel-caption d-md-block">
                     <h5>Pre-Wedding Shoot</h5>
                     <p>Pre wedding photography is intent of capturing natural expressions and natural moments and real time emotions shared by the couples.</p>
